--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -22,14 +22,16 @@
     <application
         android:name=".App"
         android:allowBackup="false"
+        android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/snake_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/snake_logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".chats.PreviewPictureActivity"></activity>
         <activity android:name=".chats.SendMessageActivity" />
-        <activity android:name=".LauncherActivity"
+        <activity
+            android:name=".LauncherActivity"
             android:noHistory="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,9 +40,10 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".services.BackgroundCommunicationService"
+        <service
+            android:name=".services.BackgroundCommunicationService"
             android:enabled="true"
-            android:exported="false"/>
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.nearby.messages.API_KEY"
@@ -56,7 +59,7 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <receiver android:name=".notifications.NotificationReceiver"/>
+        <receiver android:name=".notifications.NotificationReceiver" />
     </application>
 
 </manifest>
