--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = "1.4.10"
     repositories {
         google()
+        maven { url "https://kotlin.bintray.com/kotlinx" }
+        maven { url "http://jcenter.bintray.com"}
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -18,8 +22,9 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven { url "https://kotlin.bintray.com/kotlinx" }
+        maven { url "http://jcenter.bintray.com"}
         jcenter()
-        
     }
 }
 
